03.09.2024
-Reduced the number of text updates.
-Reduced the frequency of mouse updates related to text selection.

02.09.2024
-Added skipping of repeated commands in the command history.
-Converted instruction parameters to one-dimensional trees.

28.09.2024
-Implemented the autocomplete for file paths.
-Improved the "similar" instruction with an alternative output - the longest common substring.
-Added the "count" instruction.

27.09.2024
-Added error checks to the "find_by_id_2" instruction.
-Renamed EveModule to EventModule.
-Fixed: Newly created global variables were deleted from the context when retracing the event stack. 
-Fixed small memory leak: ALLEGRO_PATH pointer was never destroyed.

25.09.2024
-Added script paths and line numbers to error messages.
-Fixed event ordering by removing entity deletion in the middle of event execution (executeEvents()).
-Improved event debugging logs.

23.09.2024
-Renamed some attributes of "triggers", "if" and "access" instructions.
-In the "new" instruction changed the "new_ids" parameter type into "variable / vector variable / string / string vector".
-Fixed the backbuffer: it ruined the performance when a lot of text was present.
-Fixed: events could be activated with any trigger.

22.09.2024
-Added "reset" and "do_not_preserve" parameters to the instructions: build, load_build, build_subset, inject_code, inject_instr. 
-Renamed "power_off" to "exit".
-Created a simple interpreter and built-in scripts.
-Created the "console_input" instruction.
-Removed the automatic Allegro display creation and implemented the "create_display" instruction instead. 
-Rename attributes "window_w", "window_h" and "window_size" to "display_w", "display_h" and "display_size" in the "access" and "env" instructions.

21.09.2024
-Disabled CTRL+ESC shortcut and added it by hand to the examples and the terminal.
-Added command line arguments for the engine's binary.