@@ -1,3 +1,4 @@
 SAMPLES 4
 EXECUTE init/init.sand
+MOUSE_TEXT_SKIP 2
 #ENABLE_NOT_ASCII
