@@ -58,15 +58,20 @@ Currently, if you execute the engine binary without any scripts, you will get on
     -n, --not-ascii
         Allow use of other character encodings.
 
+    --mouse-text-skip
+        Set the number of skipped iterations when mouse is selecting the text. Number cannot be lower than 1.
+
 ## Config file
 
-EXECUTE script_path - executes the script in a new process - on boot and restart.
+EXECUTE script_path - execute the script in a new process - on boot and restart.
 
-SAMPLES X - sets the number of samples used in antialiasing. Maximal recommended number of samples is 8. If sampling is not supported on your machine, you must set this value to 0.
+SAMPLES *NUMBER* - set the number of samples used in antialiasing. Maximal recommended number of samples is 8. If sampling is not supported on your machine, you must set this value to 0.
 
 ENABLE_al_set_clipboard_text - al_set_clipboard_text can cause undefined behavior on some linux configurations so it's disabled by default. When enabled, allows to copy text from the engine to the clipboard of the host OS.
 
-ENABLE_NOT_ASCII - allows using characters other than ASCII.
+ENABLE_NOT_ASCII - allow using characters other than ASCII.
+
+MOUSE_TEXT_SKIP *NUMBER* - set the number of skipped iterations when mouse is selecting the text. Number cannot be lower than 1.
 
 ## Allegro5
 
